# Embedded_Linux

./: README.md
Bash/: make_file_creat.sh  systemd_another_way.sh
Bash/download_youtube/: code.bash
Bash/help you on development/: code.bash
Bash/systemd/: generate_sysd.sh
C++/week1/: RIGHT_angle_triangle.cpp  a.out  asckii_task.cpp  binary.cpp  max_num.cpp  multable_task.cpp  sumdigit.cpp  vowel_leter.cpp
C++/week2/: Sort with Lambda.cpp  calculate the square of a given number(Lambda).cpp  delete number in array.cpp  maximum number of array.cpp  maximum number of array.py  merge two arrays together.cpp  search to the number in the array.cpp  ﬁnd the even and odd numbers.cpp
C++/week3/: accumulate_of_array.cpp  array_is_even.cpp  fill_array.cpp  (+5 more)
Raspberrypi-GPIO-Controller-Using-Socket/: CMakeLists.txt  README.md  configrations.hpp  main.cpp
Raspberrypi-GPIO-Controller-Using-Socket/classes/GPIO/: gpio.hpp
Raspberrypi-GPIO-Controller-Using-Socket/classes/Led/: led.cpp  led.hpp
Raspberrypi-GPIO-Controller-Using-Socket/classes/command/: command.cpp  command.hpp
Raspberrypi-GPIO-Controller-Using-Socket/classes/server/: Server.cpp  Server.hpp
Raspi/04-bringup/: CMakeLists.txt  main.cpp
Raspi/04-bringup/csv/: csv.cpp  csv.hpp
Raspi/04-bringup/project/: a.out  csv.sh  main.cpp
Raspi/04-bringup/project/csv/: csv.cpp
Raspi/04-bringup/read/: read.hpp
linux/: simple_shell.cpp
python/: Access environment variables.py  Area of circle.py  Calendar.py  Count the number  GUI bitcoin.py  Max num.py  Methods of string.py  Pass system.py  vowel or not.py
(+55 files in other folders)
